Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24731

TextInput text not visible when 'tab' is switched

    XMLWordPrintable

Details

    Description

      The text of a Text Input is no longer visible when it is moved out of and then back into view.

      prelim: The code required may not have made it into master, see https://codereview.qt-project.org/#change,18530 for the code to reproduce the problem.

      1) ensure jsondb is running in the background via, jsondb &
      2) run the qml_location_places example in qtlocation/examples/declarative/places
      3) Click "Provider" then "nokia_places_jsondb" to switch to the jsondb plugin (which is a storage for user defined places)
      4) Open the dialog for creating new place by clicking "New" then "Place".
      5) Type in a name eg "New York"
      6) Press the "Categories button near the bottom left to 'switch tabs'
      7) Press the "Cancel" button to return to the original pane
      8) Observe that the name is no longer visible. Also observe that if you try type into the name field, the name becomes visible again.

      Attachments

        For Gerrit Dashboard: QTBUG-24731
        # Subject Branch Project Status CR V

        Activity

          People

            bealam Bea Lam (closed Nokia identity) (Inactive)
            abcd abcd (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes