Paint TextInput when it is reparented

Wasn't being repainted if it was moved off then back into view as part
of a VisualItemModel with a ListView.

Task-number: QTBUG-24731
Change-Id: I4ba8035709d3e889fb3f0fe82ef0c0523a39ead8
Reviewed-by: Andrew den Exter <andrew.den-exter@nokia.com>